Refactor physics engine to use SDL2 and enhance object management
- Updated include directives to use SDL2 instead of SDL3.
- Introduced a new Object class to encapsulate properties and behaviors of objects in the physics engine.
- Implemented methods for object acceleration, position updates, and circle drawing.
- Created a vector of objects to manage multiple instances within the simulation.
- Enhanced the main loop to handle object physics, including gravity and collision detection with screen boundaries.
- Cleaned up rendering logic and ensured proper resource management by destroying the renderer and window at the end.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,27 @@ set(SOURCES
 
 add_executable(physics_engine ${SOURCES})
 
+# Ensure target uses the requested C++ standard
+target_compile_features(physics_engine PRIVATE cxx_std_17)
 target_include_directories(physics_engine PRIVATE ${PROJECT_SOURCE_DIR})
+
+# Try to find SDL2 via CMake package first, then fall back to pkg-config
+find_package(SDL2 REQUIRED)
+if(TARGET SDL2::SDL2)
+  target_link_libraries(physics_engine PRIVATE SDL2::SDL2)
+  target_include_directories(physics_engine PRIVATE ${SDL2_INCLUDE_DIRS})
+else()
+  # Fallback: try pkg-config
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(SDL2_PKG REQUIRED sdl2)
+  if(SDL2_PKG_FOUND)
+    target_include_directories(physics_engine PRIVATE ${SDL2_PKG_INCLUDE_DIRS})
+    target_link_libraries(physics_engine PRIVATE ${SDL2_PKG_LIBRARIES})
+    target_compile_options(physics_engine PRIVATE ${SDL2_PKG_CFLAGS_OTHER})
+  else()
+    message(FATAL_ERROR "SDL2 not found. Install SDL2 development headers or provide SDL2 package for CMake.")
+  endif()
+endif()
 
 install(TARGETS physics_engine
   RUNTIME DESTINATION bin
